# End_to_end-Data-science-projects

./: README.md
Bitcoin Price prediction/: template.py
Bitcoin Price prediction/bitcoin_price_prediction/: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
Bitcoin Price prediction/bitcoin_price_prediction/.github/: ISSUE_TEMPLATE.md
Bitcoin Price prediction/bitcoin_price_prediction/docs/: index.md  installation.md  usage.md
Bitcoin Price prediction/bitcoin_price_prediction/src/bitcoin_price_prediction/: __init__.py  cli.py
Bitcoin Price prediction/bitcoin_price_prediction/tests/: __init__.py  test_bitcoin_price_prediction.py
swiggy_delivery _time Prediction/: app.py
swiggy_delivery _time Prediction/artifacts/: train.csv
swiggy_delivery _time Prediction/src/deliverytime_prediction/: exception.py  utils.py
swiggy_delivery _time Prediction/src/deliverytime_prediction/components/: data_ingestion.py
